[gd_scene load_steps=3 format=3 uid="uid://dad0e1f2g3h4i"]

[ext_resource type="Script" uid="uid://cwnb7rhnjnkdt" path="res://scripts/ui/dragon_details_modal.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://57erx6jtexcf" path="res://assets/Icons/dragons/dragon-base.tscn" id="2_dragon_visual"]

[node name="DragonDetailsModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="DimBackground" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.7)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 400)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="MainVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="TopBar" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="CloseButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/TopBar"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -40.0
offset_bottom = 40.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 20
text = "X"

[node name="ScrollContainer" type="ScrollContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="ScrollContent" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="ContentContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="LeftPanel" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/separation = 10

[node name="NameLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/LeftPanel"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 24
text = "Dragon Name"
horizontal_alignment = 1

[node name="DragonVisualContainer" type="CenterContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/LeftPanel"]
custom_minimum_size = Vector2(0, 150)
layout_mode = 2
size_flags_vertical = 3

[node name="DragonVisual" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/LeftPanel/DragonVisualContainer" instance=ExtResource("2_dragon_visual")]
unique_name_in_owner = true
position = Vector2(90, 75)
scale = Vector2(0.18, 0.18)

[node name="RightPanel" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="StatsSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "STATS"

[node name="LevelLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Level: 1"

[node name="AttackLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.4, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Attack: 0"

[node name="HealthLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 1, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Health: 0/0"

[node name="SpeedLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.4, 0.8, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Speed: 0"

[node name="XPLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 0.5, 1)
theme_override_font_sizes/font_size = 14
text = "XP: 0/100"

[node name="HSeparator1" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel"]
layout_mode = 2

[node name="StatusSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "STATUS"

[node name="StateLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "State: Idle"

[node name="HungerLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 14
text = "Hunger: 0%"

[node name="FatigueLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/StatusSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.6, 1, 1)
theme_override_font_sizes/font_size = 14
text = "Fatigue: 0%"

[node name="HSeparator2" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel"]
layout_mode = 2

[node name="PartsSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/PartsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "PARTS"

[node name="HeadLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/PartsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Head: Fire"

[node name="BodyLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/PartsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Body: Ice"

[node name="TailLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/ContentContainer/RightPanel/PartsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Tail: Lightning"

[node name="BottomPanel" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="HSeparator3" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel"]
layout_mode = 2

[node name="SectionsContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="ActionsSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ActionsSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "ACTIONS"

[node name="ButtonsGrid" type="GridContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ActionsSection"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="FeedButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ActionsSection/ButtonsGrid"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Feed"

[node name="TrainButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ActionsSection/ButtonsGrid"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Train"

[node name="RestButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ActionsSection/ButtonsGrid"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Rest"

[node name="DefendButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ActionsSection/ButtonsGrid"]
custom_minimum_size = Vector2(130, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "Assign to Defense"

[node name="ExplorationSection" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8

[node name="Title" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ExplorationSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
theme_override_font_sizes/font_size = 18
text = "EXPLORATION"

[node name="StatusLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ExplorationSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 1, 0.8, 1)
theme_override_font_sizes/font_size = 14
text = "Ready to explore"

[node name="ExplorationControls" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ExplorationSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DestinationDropdown" type="OptionButton" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ExplorationSection/ExplorationControls"]
custom_minimum_size = Vector2(200, 40)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14

[node name="SendButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/MainVBox/ScrollContainer/ScrollContent/BottomPanel/SectionsContainer/ExplorationSection/ExplorationControls"]
custom_minimum_size = Vector2(100, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SEND"
